Forseeing a custom config provider for yarp. Retrieving routes from a config file (this file is then saved to consul KV store). Building Clusters config file dynamically, using data retrieved from consul.

--- a/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway.csproj
+++ b/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway.csproj
@@ -21,4 +21,10 @@
     <ProjectReference Include="..\SwizlyPeasy.Consul\SwizlyPeasy.Consul.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="routes.config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
