--- a/SwizlyPeasy.Gateway/appsettings.json
+++ b/SwizlyPeasy.Gateway/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "route1": {
+        "ClusterId": "cluster1",
+        "Match": {
+          "Path": "{**catch-all}",
+          "Hosts": [ "www.aaaaa.com", "www.bbbbb.com" ]
+        }
+      }
+    }
+  }
 }
