modifying nlog config

--- a/SwizlyPeasy.Gateway/NLog.config
+++ b/SwizlyPeasy.Gateway/NLog.config
@@ -3,7 +3,7 @@
 	<targets>
 	  <target xsi:type="File"
 	          name="error.file"
-	          fileName="${basedir}/data/Logs/dsm.error.log"
+	          fileName="${basedir}/data/Logs/gateway.error.log"
 	          createDirs="true"
 	          layout="${longdate}|${uppercase:${level}}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}"
 	          archiveFileName="${basedir}/data/Logs/Archives/gateway.{####}.log"
@@ -12,7 +12,7 @@
 	          maxArchiveFiles="365" />
     <target xsi:type="File"
             name="file"
-            fileName="${basedir}/data/Logs/dsm.log"
+            fileName="${basedir}/data/Logs/gateway.log"
             createDirs="true"
             layout="${longdate}|${uppercase:${level}}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}"
             archiveFileName="${basedir}/data/Logs/Archives/gateway.error.{####}.log"
