fixing some issues with configuration (was using default value)

--- a/SwizlyPeasy.Gateway/appsettings.Development.json
+++ b/SwizlyPeasy.Gateway/appsettings.Development.json
@@ -4,5 +4,22 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "OidcConfig": {
+    "RefreshThresholdMinutes": 1,
+    "Origins": [],
+    "Authority": "https://demo.duendesoftware.com/",
+    "CallbackUri": "/signin-oidc",
+    "ClientId": "interactive.confidential.short",
+    "ClientSecret": "secret",
+    "RedirectUri": "",
+    "Scopes": [ "openid", "profile", "email", "offline_access" ]
+  },
+  "ServiceDiscovery": {
+    "Scheme": "http",
+    "RefreshIntervalInSeconds": 120,
+    "LoadBalancingPolicy": "Random",
+    "KeyValueStoreKey": "SwizlyPeasy.Gateway2",
+    "ServiceDiscoveryAddress": "http://localhost:8500"
   }
 }
