adding cluster config tests

--- a/Test/SwizlyPeasy.Test.UnitTest/SwizlyPeasy.Test.UnitTest.csproj
+++ b/Test/SwizlyPeasy.Test.UnitTest/SwizlyPeasy.Test.UnitTest.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\SwizlyPeasy.Consul\SwizlyPeasy.Consul.csproj" />
+    <ProjectReference Include="..\..\SwizlyPeasy.Gateway\SwizlyPeasy.Gateway.csproj" />
   </ItemGroup>
 
 </Project>
