--- a/Test/SwizlyPeasy.Test.UnitTest/SwizlyPeasy.Test.UnitTest.csproj
+++ b/Test/SwizlyPeasy.Test.UnitTest/SwizlyPeasy.Test.UnitTest.csproj
@@ -11,6 +11,10 @@
 
   <ItemGroup>
     <PackageReference Include="Consul" Version="1.6.10.9" />
+    <PackageReference Include="coverlet.msbuild" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="xunit" Version="2.5.0" />
