--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectKey=ggnaegi_SwizlyPeasy.Gateway
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
-sonar.cs.opencover.reportsPaths="Test\SwizlyPeasy.Test.UnitTest\TestResults\coverage.opencover.xml" 
+sonar.cs.opencover.reportsPaths="**/*.opencover.xml" 
 sonar.coverage.exclusions="**Test*.cs"
