--- a/SwizlyPeasy.Gateway/NLog.config
+++ b/SwizlyPeasy.Gateway/NLog.config
@@ -1,29 +1,32 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true">
+<?xml version="1.0" encoding="utf-8"?>
+
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      autoReload="true">
 	<targets>
-	  <target xsi:type="File"
-	          name="error.file"
-	          fileName="${basedir}/data/Logs/gateway.error.log"
-	          createDirs="true"
-	          layout="${longdate}|${uppercase:${level}}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}"
-	          archiveFileName="${basedir}/data/Logs/Archives/gateway.{####}.log"
-	          archiveEvery="Day"
-	          archiveNumbering="Sequence"
-	          maxArchiveFiles="365" />
-    <target xsi:type="File"
-            name="file"
-            fileName="${basedir}/data/Logs/gateway.log"
-            createDirs="true"
-            layout="${longdate}|${uppercase:${level}}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}"
-            archiveFileName="${basedir}/data/Logs/Archives/gateway.error.{####}.log"
-            archiveEvery="Day"
-            archiveNumbering="Sequence"
-            maxArchiveFiles="365" />
-    <target name="debugger" xsi:type="Debugger" layout="[${uppercase:${level}}] -- ${logger} -- ${message}${onexception:${newline}${exception:format=tostring}}"/>
-  </targets>
-  <rules>
-	  <logger name="*" minlevel="Debug" writeTo="debugger" />
-    <logger name="*" minlevel="Info" writeTo="file" />
-    <logger name="*" minlevel="Error" writeTo="error.file" />
-  </rules>
+		<target xsi:type="File"
+		        name="error.file"
+		        fileName="${basedir}/data/Logs/gateway.error.log"
+		        createDirs="true"
+		        layout="${longdate}|${uppercase:${level}}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}"
+		        archiveFileName="${basedir}/data/Logs/Archives/gateway.{####}.log"
+		        archiveEvery="Day"
+		        archiveNumbering="Sequence"
+		        maxArchiveFiles="365" />
+		<target xsi:type="File"
+		        name="file"
+		        fileName="${basedir}/data/Logs/gateway.log"
+		        createDirs="true"
+		        layout="${longdate}|${uppercase:${level}}|${logger}|${message}${onexception:${newline}${exception:format=tostring}}"
+		        archiveFileName="${basedir}/data/Logs/Archives/gateway.error.{####}.log"
+		        archiveEvery="Day"
+		        archiveNumbering="Sequence"
+		        maxArchiveFiles="365" />
+		<target name="debugger" xsi:type="Debugger"
+		        layout="[${uppercase:${level}}] -- ${logger} -- ${message}${onexception:${newline}${exception:format=tostring}}" />
+	</targets>
+	<rules>
+		<logger name="*" minlevel="Debug" writeTo="debugger" />
+		<logger name="*" minlevel="Info" writeTo="file" />
+		<logger name="*" minlevel="Error" writeTo="error.file" />
+	</rules>
 </nlog>
