--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  GatewayCiPipeline:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
