Adding docker-compose support, avoid using IIS Express

--- a/Demo/SwizlyPeasy.Demo.API/appsettings.Development.json
+++ b/Demo/SwizlyPeasy.Demo.API/appsettings.Development.json
@@ -10,12 +10,12 @@
     "RefreshIntervalInSeconds": 120,
     "LoadBalancingPolicy": "Random",
     "KeyValueStoreKey": "SwizlyPeasy.Gateway",
-    "ServiceDiscoveryAddress": "http://localhost:8500"
+    "ServiceDiscoveryAddress": "http://consul:8500"
   },
   "ServiceRegistration": {
     "ServiceName": "DemoAPI",
     "ServiceId": "1",
-    "ServiceAddress": "http://localhost:8020",
+    "ServiceAddress": "http://demo",
     "HealthCheckPath": "health"
   }
 }
