--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,11 +19,11 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore dotnet restore SwizlyPeasy.Gateway.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore SwizlyPeasy.Gateway.sln
     - name: Test
-      run: dotnet test --no-build /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=opencover
+      run: dotnet test --no-build SwizlyPeasy.Gateway.sln /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=opencover
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
