--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,3 +11,6 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+  swizlypeasy.demo.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
