--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   consul-service:
-    image: "consul:latest"
+    image: "hashicorp/consul:latest"
     command: consul agent -dev -log-level=warn -ui -client=0.0.0.0
     hostname: consul
     ports:
