--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,8 +22,10 @@ jobs:
       run: dotnet restore SwizlyPeasy.Gateway.sln
     - name: Build
       run: dotnet build --no-restore SwizlyPeasy.Gateway.sln
-    - name: UnitTest
-      run: dotnet test --no-build SwizlyPeasy.Gateway.sln /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=opencover
+    - name: Unit Test
+      run: dotnet test --no-build --filter 'FullyQualifiedName!~IntegrationTest' SwizlyPeasy.Gateway.sln /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=opencover
+    - name: Start Multi Containers
+      run: docker-compose -f docker-compose.yml -f docker-compose.override.yml up
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@master
       env:
