Adding package references

--- a/SwizlyPeasy.Consul/SwizlyPeasy.Consul.csproj
+++ b/SwizlyPeasy.Consul/SwizlyPeasy.Consul.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <PackageId>SwizlyPeasy.Consul</PackageId>
+	  <Version>0.0.1</Version>
+	  <Authors>Guillaume Gnaegi</Authors>
   </PropertyGroup>
 
   <ItemGroup>
