--- a/.github/workflows/nugets.yml
+++ b/.github/workflows/nugets.yml
@@ -18,11 +18,11 @@ jobs:
     - name: Build
       run: dotnet build --no-restore SwizlyPeasy.Gateway.sln -c Release
     - name: Pack SwizlyPeasy.Common
-      run: dotnet pack -c Release --no-build --output . SwizlyPeasy.Common/SwizlyPeasy.Common.csproj
+      run: dotnet pack -c Release SwizlyPeasy.Common/SwizlyPeasy.Common.csproj --no-build --output .
     - name: Pack SwizlyPeasy.Consul
-      run: dotnet pack -c Release --no-build --output . SwizlyPeasy.Consul/SwizlyPeasy.Consul.csproj
+      run: dotnet pack -c Release SwizlyPeasy.Consul/SwizlyPeasy.Consul.csproj --no-build --output .
     - name: Pack SwizlyPeasy.Gateway
-      run: dotnet pack -c Release --no-build --output . SwizlyPeasy.Gateway/SwizlyPeasy.Gateway.csproj
+      run: dotnet pack -c Release SwizlyPeasy.Gateway/SwizlyPeasy.Gateway.csproj --no-build --output .
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key NUGET_TOKEN --source https://api.nuget.org/v3/index.json
       env:
