--- a/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway.csproj
+++ b/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway.csproj
@@ -9,10 +9,13 @@
 		<PackageId>SwizlyPeasy.Gateway</PackageId>
 		<Version>0.0.3</Version>
 		<Authors>Guillaume Gnaegi</Authors>
-		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageDescription>This package contains the extensions methods to configure and use the SwizlyPeasy.Gateway, a YARP-based gateway with OIDC authentication and Consul service discovery.</PackageDescription>
 		<RepositoryUrl>https://github.com/ggnaegi/SwizlyPeasy.Gateway</RepositoryUrl>
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -35,7 +38,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="docs\README.md" Pack="true" PackagePath="\"/>
+		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
