adding a test route for anonymous access

--- a/SwizlyPeasy.Gateway.API/appsettings.Development.json
+++ b/SwizlyPeasy.Gateway.API/appsettings.Development.json
@@ -21,5 +21,18 @@
     "LoadBalancingPolicy": "Random",
     "KeyValueStoreKey": "SwizlyPeasy.Gateway",
     "ServiceDiscoveryAddress": "http://consul:8500"
+  },
+  "ClaimsConfig": {
+    "ClaimsHeaderPrefix": "SWIZLY-PEASY",
+    "ClaimsAsHeaders": [
+      "sub",
+      "email",
+      "name",
+      "family_name"
+    ],
+    "JwtToIdentityClaimsMappings": {
+      "sub": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier",
+      "email": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress"
+    }
   }
 }
