--- a/Demo/SwizlyPeasy.Demo.API/appsettings.Development.json
+++ b/Demo/SwizlyPeasy.Demo.API/appsettings.Development.json
@@ -17,5 +17,18 @@
     "ServiceId": "1",
     "ServiceAddress": "http://demo",
     "HealthCheckPath": "health"
+  },
+  "ClaimsConfig": {
+    "ClaimsHeaderPrefix": "SWIZLY-PEASY",
+    "ClaimsAsHeaders": [
+      "sub",
+      "email",
+      "name",
+      "family_name"
+    ],
+    "JwtToIdentityClaimsMappings": {
+      "sub": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier",
+      "email": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress"
+    }
   }
 }
