--- a/Test/SwizlyPeasy.Test.IntegrationTest/SwizlyPeasy.Test.IntegrationTest.csproj
+++ b/Test/SwizlyPeasy.Test.IntegrationTest/SwizlyPeasy.Test.IntegrationTest.csproj
@@ -15,6 +15,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Ductus.FluentDocker.XUnit" Version="2.10.59" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.9" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
 		<PackageReference Include="xunit" Version="2.5.0" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
@@ -29,16 +30,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\SwizlyPeasy.Common\SwizlyPeasy.Common.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<None Update="Docker\docker-compose.override.yml">
-			<DependentUpon>docker-compose.yml</DependentUpon>
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
-		<None Update="Docker\docker-compose.yml">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</None>
+		<ProjectReference Include="..\..\SwizlyPeasy.Gateway.API\SwizlyPeasy.Gateway.API.csproj" />
 	</ItemGroup>
 
 </Project>
