--- a/Demo/SwizlyPeasy.Demo.API/appsettings.IntegrationTest.json
+++ b/Demo/SwizlyPeasy.Demo.API/appsettings.IntegrationTest.json
@@ -5,22 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OidcConfig": {
-    "RefreshThresholdMinutes": 1,
-    "Origins": [],
-    "Authority": "https://demo.duendesoftware.com/",
-    "CallbackUri": "/signin-oidc",
-    "ClientId": "interactive.confidential.short",
-    "ClientSecret": "secret",
-    "RedirectUri": "",
-    "Scopes": [ "openid", "profile", "email", "offline_access" ]
-  },
   "ServiceDiscovery": {
     "Scheme": "http",
     "RefreshIntervalInSeconds": 120,
     "LoadBalancingPolicy": "Random",
     "KeyValueStoreKey": "SwizlyPeasy.Gateway",
-    "ServiceDiscoveryAddress": "http://localhost:8500"
+    "ServiceDiscoveryAddress": "http://127.0.0.1:8500"
+  },
+  "ServiceRegistration": {
+    "ServiceName": "DemoAPI",
+    "ServiceId": "1",
+    "ServiceAddress": "http://127.0.0.1:8020",
+    "HealthCheckPath": "health"
   },
   "ClaimsConfig": {
     "ClaimsHeaderPrefix": "SWIZLY-PEASY",
