Fixing tests, adding new integration test on anonymous endpoint

--- a/Demo/SwizlyPeasy.Demo.API/appsettings.IntegrationTest2.json
+++ b/Demo/SwizlyPeasy.Demo.API/appsettings.IntegrationTest2.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "http://127.0.0.1:8030"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
