--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,8 @@ jobs:
       run: dotnet build --no-restore SwizlyPeasy.Gateway.sln
     - name: Unit Test
       run: dotnet test --no-build --filter 'FullyQualifiedName!~IntegrationTest' SwizlyPeasy.Gateway.sln /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=opencover
+    - name: Rename paths in coverage file
+      run: sed -i 's|/home/runner/work/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway||g' /home/runner/work/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway/Test/SwizlyPeasy.Test.UnitTest/TestResults/coverage.opencover.xml
     - name: Start Multi Containers
       run: docker-compose -f Test/SwizlyPeasy.Test.IntegrationTest/Docker/docker-compose.yml -f Test/SwizlyPeasy.Test.IntegrationTest/Docker/docker-compose.override.yml up -d
     - name: Sleep for 20 seconds
@@ -37,6 +39,8 @@ jobs:
       shell: bash
     - name: Integration Test
       run: dotnet test --no-build --filter 'FullyQualifiedName!~UnitTest' SwizlyPeasy.Gateway.sln /p:CollectCoverage=true /p:CoverletOutput=TestResults/ /p:CoverletOutputFormat=opencover
+    - name: Rename paths in coverage file
+      run: sed -i 's|/home/runner/work/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway||g' /home/runner/work/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway/Test/SwizlyPeasy.Test.IntegrationTest/TestResults/coverage.opencover.xml
     - name: SonarScanner for .NET 7 with pull request decoration support
       uses: highbyte/sonarscan-dotnet@v2.2.2
       with:
@@ -45,7 +49,7 @@ jobs:
         sonarOrganization: ggnaegi
         dotnetBuildArguments: SwizlyPeasy.Gateway.sln
         dotnetDisableTests: true
-        sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/*.opencover.xml" /d:sonar.verbose=true /d:sonar.scm.exclusions.disabled=true /d:sonar.projectBaseDir="/home/runner/work/SwizlyPeasy.Gateway/SwizlyPeasy.Gateway"
+        sonarBeginArguments: /d:sonar.cs.opencover.reportsPaths="**/*.opencover.xml" /d:sonar.verbose=true /d:sonar.scm.exclusions.disabled=true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
