--- a/SwizlyPeasy.Gateway.API/SwizlyPeasy.Gateway.API.csproj
+++ b/SwizlyPeasy.Gateway.API/SwizlyPeasy.Gateway.API.csproj
@@ -15,7 +15,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="NLog.config" />
+		<None Include="NLog.config">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 		<None Include="routes.config.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
