--- a/Test/SwizlyPeasy.Test.IntegrationTest/SwizlyPeasy.Test.IntegrationTest.csproj
+++ b/Test/SwizlyPeasy.Test.IntegrationTest/SwizlyPeasy.Test.IntegrationTest.csproj
@@ -16,9 +16,10 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Ductus.FluentDocker.XUnit" Version="2.10.59" />
+		<PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.9" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
-		<PackageReference Include="OpenCover" Version="4.7.1221" />
+		<PackageReference Include="WebMotions.Fake.Authentication.JwtBearer" Version="7.0.0" />
 		<PackageReference Include="xunit" Version="2.5.0" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
