adding custom parameter in oidc config, DisableOidc, to allow oidc deactivation for tests. Returning a warning message when oidc config has been deactivated

--- a/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest.json
+++ b/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest.json
@@ -13,7 +13,8 @@
     "ClientId": "interactive.confidential.short",
     "ClientSecret": "secret",
     "RedirectUri": "",
-    "Scopes": [ "openid", "profile", "email", "offline_access" ]
+    "Scopes": [ "openid", "profile", "email", "offline_access" ],
+    "DisableOidc": true
   },
   "ServiceDiscovery": {
     "Scheme": "http",
