registering last service as another service type....

--- a/Demo/SwizlyPeasy.Demo.API/appsettings.IntegrationTest3.json
+++ b/Demo/SwizlyPeasy.Demo.API/appsettings.IntegrationTest3.json
@@ -20,8 +20,8 @@
     "ServiceDiscoveryAddress": "http://127.0.0.1:8500"
   },
   "ServiceRegistration": {
-    "ServiceName": "DemoAPI",
-    "ServiceId": "3",
+    "ServiceName": "FakeAPI",
+    "ServiceId": "1",
     "ServiceAddress": "http://127.0.0.1:8040",
     "HealthCheckPath": "health"
   },
