--- a/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest.json
+++ b/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AuthRedirectionConfig": {
+    "MainUrl": "/",
+    "IdpLogoutUrl": "https://demo.duendesoftware.com/Account/Logout/LoggedOut"
+  },
   "OidcConfig": {
     "RefreshThresholdMinutes": 1,
     "Origins": [],
