--- a/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest2.json
+++ b/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest2.json
@@ -39,5 +39,16 @@
       "sub": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/nameidentifier",
       "email": "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress"
     }
-  }
+  },
+  "RateLimiterPolicies": [
+    {
+      "PolicyName": "swizly1",
+      "RateLimiterType": "FixedWindowRateLimiter",
+      "AutoReplenishment": true,
+      "PermitLimit": 5,
+      "QueueLimit": 0,
+      "QueueProcessingOrder": 1,
+      "Window": 12
+    }
+  ]
 }
