Adding forwarded headers support, Allow cors parameter

--- a/SwizlyPeasy.Gateway.API/appsettings.Development.json
+++ b/SwizlyPeasy.Gateway.API/appsettings.Development.json
@@ -10,6 +10,8 @@
     "IdpLogoutUrl": "https://demo.duendesoftware.com/Account/Logout/LoggedOut"
   },
   "OidcConfig": {
+    "MinimumSameSiteMode": 0,
+    "AllowCors": true,
     "RefreshThresholdMinutes": 1,
     "Origins": [],
     "Authority": "https://demo.duendesoftware.com/",
@@ -49,5 +51,11 @@
       "QueueProcessingOrder": 1,
       "Window": 12
     }
-  ]
+  ],
+  "ProxiesAndNetworksConfig": {
+    "UseForwardedHeaders": false,
+    "Proxies": [],
+    "KnownNetworks": [],
+    "ForwardLimit": 1
+  }
 }
