--- a/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest.json
+++ b/SwizlyPeasy.Gateway.API/appsettings.IntegrationTest.json
@@ -10,6 +10,8 @@
     "IdpLogoutUrl": "https://demo.duendesoftware.com/Account/Logout/LoggedOut"
   },
   "OidcConfig": {
+    "MinimumSameSiteMode": 0,
+    "AllowCors": true,
     "RefreshThresholdMinutes": 1,
     "Origins": [],
     "Authority": "https://demo.duendesoftware.com/",
@@ -77,5 +79,11 @@
       "TokenLimit": 20,
       "TokensPerPeriod": 10
     }
-  ]
+  ],
+  "ProxiesAndNetworksConfig": {
+    "UseForwardedHeaders": false,
+    "Proxies": [],
+    "KnownNetworks": [],
+    "ForwardLimit": 1
+  }
 }
